[package]
name = "rawrcore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
lazy_static = "1.4.0"
rand = "0.8.5"
reqwest = { version = "0.11.13", features = ["json"] }
serde = "1.0.152"
serde_json = "1.0.91"

